# property-driven-ml

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
data/alsomitra/: alsomitra_data_680.csv
data/dice/: labels.csv
examples/: __init__.py  dice.vcl  make_alsomitra_regression_plots.py  models.py  run.sh  simple_example.py
examples/datasets/: __init__.py  alsomitra.py  dice.py  gtsrb.py  mnist.py
results/: Makefile  alsomitra_results.py  results.py  tikz_settings.tex
results/AlsomitraProperty1/alsomitra/: Baseline.csv  DL2.csv  GD.csv
results/AlsomitraProperty2/alsomitra/: Baseline.csv  DL2.csv  GD.csv  LK.csv  RC.csv  YG.csv
results/AlsomitraProperty3/alsomitra/: Baseline.csv  DL2.csv  GD.csv
results/LipschitzRobustness/alsomitra/: Baseline-RegressionPlot.csv  Baseline.csv  DL2-RegressionPlot.csv  DL2.csv  GD-RegressionPlot.csv  GD.csv
results/StandardRobustness/mnist/: Baseline.csv  DL2.csv  GD.csv
scripts/: setup-tokens.sh  upload.sh
src/property_driven_ml/: __init__.py  cli.py
src/property_driven_ml/constraints/: __init__.py  base.py  bounded_datasets.py  constraints.py  postconditions.py  preconditions.py
src/property_driven_ml/logics/: __init__.py  boolean_logic.py  dl2.py  fuzzy_logics.py  logic.py  stl.py
src/property_driven_ml/training/: __init__.py  attacks.py  engine.py  epoch_info.py  grad_norm.py  mode.py
src/property_driven_ml/utils/: __init__.py  factories.py  safe_eval.py  util.py  visualization.py
